[tool.poetry]
name = "pybus"
version = "0.1.0"
description = "Type-safe, high-performance message bus for python users"
authors = ["ahnsv <ahnsv@bc.edu>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
isort = "^5.9.3"
pycln = "^1.0.3"
mypy = "^0.910"
black = "21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
